--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -161,6 +161,7 @@
 #define TEXT_1UP_LEVEL _("All 1-ups in Level")
 #define TEXT_STARS_LEVEL _("All Stars in Level")
 #define TEXT_MARIO_HAT _("Lose Mario's hat")
+#define TEXT_BLJ _("Perform a BLJ")
 #define TEXT_EXCLAM_BOXES _("Break ! Boxes")
 #define TEXT_KILL_GOOMBAS _("Kill Goombas")
 #define TEXT_KILL_BOBOMBS _("Kill Bob-ombs")
