[multistar] Add multiple star objective

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -149,7 +149,8 @@
 #define TEXT_FILE_MARIO_D _("MARIO D")
 
 // Bingo Options
-#define TEXT_SINGLE_STAR _("Single Stars")
+#define TEXT_SINGLE_STAR _("Single Star")
+#define TEXT_MULTI_STAR _("Multiple Stars")
 #define TEXT_A_BUTTON _("A Button Challenge")
 #define TEXT_B_BUTTON _("B Button Challenge")
 #define TEXT_Z_BUTTON _("Z Button Challenge")
