[option] Nightmare refactor to allow for non-objective options

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -171,7 +171,9 @@
 
 #define TEXT_DPAD _("Use D-Pad to select")
 #define TEXT_PRESS_A _("Press A to toggle")
-#define TEXT_PRESS_RL _("Press R or L for credits")
+#define TEXT_PRESS_RL_1 _("Page 1. Press R or L...")
+#define TEXT_PRESS_RL_2 _("Page 2. Press R or L...")
+#define TEXT_PRESS_RL_3 _("Page 3. Press R or L...")
 
 // Bingo Credits
 #define TEXT_BINGO64 _("Bingo64 (v0.7a)")
