[click game] Implement 3 click game, with temporary HUD UI

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -249,6 +249,7 @@
 
 #define BINGO_GREEN_DEMON _("GREEN DEMON")
 #define BINGO_REVERSE_JOYSTICK _("REVERSE JOYSTICK")
+#define BINGO_CLICK_GAME _("THE N CLICK GAME!")
 #define BINGO_DAREDEVIL_1HP _("DAREDEVIL - 1 HP")
 
 // Camera Options
