[version] Bump version

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -183,7 +183,7 @@
 #define TEXT_PRESS_RL_3 _("Page 3. Press R or L...")
 
 // Bingo Credits
-#define TEXT_BINGO64 _("Bingo64 (v0.7b)")
+#define TEXT_BINGO64 _("Bingo64 (v0.8a)")
 #define TEXT_CREATED_BY _("by Quate and genteelman")
 #define TEXT_SPECIAL_THANKS _("Special Thanks")
 #define TEXT_ALO _("AloXado320")
