--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -175,6 +175,7 @@
 #define TEXT_RED_COINS _("Collect Red Coins")
 #define TEXT_KILL_GOOMBAS _("Kill Goombas")
 #define TEXT_KILL_BOBOMBS _("Kill Bob-ombs")
+#define TEXT_KILL_SPINDRIFTS _("Kill Spindrifts")
 #define TEXT_KILL_MR_IS _("Kill Mr. Is")
 
 #define TEXT_DPAD _("Use D-Pad to select")
