--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -173,6 +173,7 @@
 #define TEXT_STARS_LEVEL _("All Stars in Level")
 #define TEXT_MARIO_HAT _("Lose Mario's hat")
 #define TEXT_BLJ _("Perform a BLJ")
+#define TEXT_BOWSER _("Defeat Bowser")
 #define TEXT_EXCLAM_BOXES _("Break ! Boxes")
 #define TEXT_RED_COINS _("Collect Red Coins")
 #define TEXT_KILL_GOOMBAS _("Kill Goombas")
