--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -251,7 +251,7 @@
 
 // Bingo course modifiers
 #define BINGO_MODIFIER _("BINGO MODIFIER")
-#define BINGO_PRESS_L_OR_R _(" PRESS L OR R...")  // space intentional for centering
+#define BINGO_PRESS_L_OR_R _(" PRESS Z OR R...")  // space intentional for centering
 
 #define BINGO_GREEN_DEMON _("GREEN DEMON")
 #define BINGO_REVERSE_JOYSTICK _("REVERSE JOYSTICK")
