[misc] Get rid of checkpointing (pyramid, volcano)

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -165,7 +165,7 @@
 #define TEXT_TIMED_STAR _("Timed Stars")
 #define TEXT_REVERSE_JOYSTICK _("Reverse Joystick")
 #define TEXT_GREEN_DEMON _("Green Demon")
-#define TEXT_CLICK_GAME _("The N-Click Game")
+#define TEXT_CLICK_GAME _("The Click Game")
 #define TEXT_DAREDEVIL _("Daredevil")
 #define TEXT_COIN_LEVEL _("Coins in Level")
 #define TEXT_TOTAL_COIN _("Total Coins")
@@ -266,7 +266,7 @@
 
 #define BINGO_GREEN_DEMON _("GREEN DEMON")
 #define BINGO_REVERSE_JOYSTICK _("REVERSE JOYSTICK")
-#define BINGO_CLICK_GAME _("THE N CLICK GAME!")
+#define BINGO_CLICK_GAME _("THE CLICK GAME!")
 #define BINGO_DAREDEVIL_1HP _("DAREDEVIL - 1 HP")
 
 // Camera Options
