--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -175,6 +175,7 @@
 #define TEXT_BLJ _("Perform a BLJ")
 #define TEXT_BOWSER _("Defeat Bowser")
 #define TEXT_EXCLAM_BOXES _("Break ! Boxes")
+#define TEXT_SIGNPOSTS _("Read Signposts")
 #define TEXT_RED_COINS _("Collect Red Coins")
 #define TEXT_KILL_GOOMBAS _("Kill Goombas")
 #define TEXT_KILL_BOBOMBS _("Kill Bob-ombs")
