[cap boxes] Add cap boxes objectives

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -176,7 +176,10 @@
 #define TEXT_DANGEROUS_WALL_KICKS _("Perilous Wallkicks")
 #define TEXT_BLJ _("Perform BLJs")
 #define TEXT_BOWSER _("Defeat Bowser")
-#define TEXT_EXCLAM_BOXES _("Break ! Boxes")
+#define TEXT_EXCLAM_BOXES _("Yellow ! Boxes")
+#define TEXT_WING_BOXES _("Wing Cap Boxes")
+#define TEXT_VANISH_BOXES _("Vanish Cap Boxes")
+#define TEXT_METAL_BOXES _("Metal Cap Boxes")
 #define TEXT_SIGNPOSTS _("Read Signposts")
 #define TEXT_POLES _("Grab Poles")
 #define TEXT_RED_COINS _("Collect Red Coins")
