--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -176,6 +176,7 @@
 #define TEXT_DANGEROUS_WALL_KICKS _("Perilous Wallkicks")
 #define TEXT_BLJ _("Perform BLJs")
 #define TEXT_BOWSER _("Defeat Bowser")
+#define TEXT_ROOF_WITHOUT_CANNON _("Roof, No Cannon")
 #define TEXT_EXCLAM_BOXES _("Yellow ! Boxes")
 #define TEXT_WING_BOXES _("Wing Cap Boxes")
 #define TEXT_VANISH_BOXES _("Vanish Cap Boxes")
