[racing] Add racing stars objective

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -175,6 +175,7 @@
 #define TEXT_MARIO_HAT _("Lose Mario's hat")
 #define TEXT_DANGEROUS_WALL_KICKS _("Perilous Wallkicks")
 #define TEXT_BLJ _("Perform BLJs")
+#define TEXT_RACING _("Racing Stars")
 #define TEXT_BOWSER _("Defeat Bowser")
 #define TEXT_ROOF_WITHOUT_CANNON _("Roof, No Cannon")
 #define TEXT_EXCLAM_BOXES _("Yellow ! Boxes")
