--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -195,6 +195,7 @@
 #define TEXT_KILL_SPINDRIFTS _("Kill Spindrifts")
 #define TEXT_KILL_MR_IS _("Kill Mr. Is")
 #define TEXT_KILL_SCUTTLEBUGS _("Kill Scuttlebugs")
+#define TEXT_KILL_BULLIES _("Kill Bullies")
 
 #define TEXT_DPAD _("Use C or D-Pad to select")
 #define TEXT_PRESS_A _("Press A to toggle")
@@ -220,6 +221,7 @@
 #define TEXT_SPECIAL_THANKS_11 _("Zyon")
 #define TEXT_SPECIAL_THANKS_12 _("nim")
 #define TEXT_SPECIAL_THANKS_13 _("JoshDuMan")
+#define TEXT_SPECIAL_THANKS_14 _("pannenkoek2012 (bully sprite)")
 
 
 // Menu Options
