[random reds] Add functional Random Route Reds bingo modifier

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -286,6 +286,7 @@
 #define BINGO_REVERSE_JOYSTICK _("REVERSE JOYSTICK")
 #define BINGO_CLICK_GAME _("THE CLICK GAME!")
 #define BINGO_DAREDEVIL_1HP _("DAREDEVIL - 1 HP")
+#define BINGO_RANDOM_ROUTE_RED_COINS _("RANDOM ROUTE RED COINS")
 
 // Camera Options
 #define TEXT_LAKITU_MARIO _("LAKITU + MARIO")
