[chuckya] Add chuckya objective

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -197,6 +197,7 @@
 #define TEXT_KILL_MR_IS _("Kill Mr. Is")
 #define TEXT_KILL_SCUTTLEBUGS _("Kill Scuttlebugs")
 #define TEXT_KILL_BULLIES _("Kill Bullies")
+#define TEXT_KILL_CHUCKYAS _("Kill Chuckyas")
 
 #define TEXT_DPAD _("Use C or D-Pad to select")
 #define TEXT_PRESS_A _("Press A to toggle")
