--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -198,6 +198,8 @@
 #define TEXT_KILL_SCUTTLEBUGS _("Kill Scuttlebugs")
 #define TEXT_KILL_BULLIES _("Kill Bullies")
 #define TEXT_KILL_CHUCKYAS _("Kill Chuckyas")
+#define TEXT_RIDE_SHELLS _("Ride shells")
+#define TEXT_CASTLE_SECRET_STARS _("Castle Secret Stars")
 
 #define TEXT_DPAD _("Use C or D-Pad to select")
 #define TEXT_PRESS_A _("Press A to toggle")
